# wyvern

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: interactive_planform.py  payload_sensitivity_study.py  week_1_aircraft_sizing.ipynb  week_1_sweep.ipynb  week_2_clean_plots.py  week_2_planform.ipynb  week_2_wing_sizing.py
examples/pdr_refined_design/: payload_sensitivity_study.py  performance_param_plot.py  week_4_performance.ipynb
examples/refined_design/: performance_param_plot.py  ws_sensitivity.py
examples/week_2/: week_2_planform.ipynb
scripts/fdr_design/: beta_plots.py  cl_lift_plots.py  cm_plots.py  final_performance.py  payload_sensitivity_study.py  performance_param_plot.py  refined_cd0.py  stall_analysis.py  stall_postprocess.py  structural_design.py  takeoff_analysis.ipynb  xfoil_sweep.py
scripts/pdr_refined_design/: airfoil_to_tex.py  payload_sensitivity_study.py  performance_param_plot.py  planform_info.ipynb  takeoff_analysis.ipynb  week_4_performance.ipynb  ws_sensitivity.py
scripts/week_1/: week_1_sweep.ipynb
scripts/week_2/: interactive_planform.py  week_2_clean_plots.py  week_2_planform.ipynb  week_2_wing_sizing.py
tests/: test_aircraft_mass.py  test_as_mtow_ratio.py  test_geom_utils.py
wyvern/: _version.py
wyvern/analysis/: parameters.py  payload_sweep.py  sensitivity.py  structural_design.py
wyvern/data/: __init__.py  airfoils.py  components.py  course.py  historical.py  payloads.py  planform_configs.py  propellers.py
wyvern/layout/: __init__.py  geom_utils.py  interactive_viz.py  planform.py  viz.py
(+39 files in other folders)
